# physvm_develop

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  COPYRIGHT_2018-2021  FAQs.md  FunctionAnnotationResult.lean  GRAMMAR.md  HOW_TO_RUN_IT.md  ONBOARD.md  PeirceOutput2 copy.lean  PeirceOutput2.lean  PeirceOutput3.lean  PeirceOutput_CHECK.lean  README.md  README_COPYRIGHT  ROADMAP.md  ROS-install.md  ROSSupport.md  TODO.md  TODO.txt  annotations.txt  annotations_tut.txt  annotations_tutorial.txt  cmds.md  cont.sh  delete_peircelog.sh  fileyxHXFv.lean  geom1d_test.lean  gitlab-ci.yml  grammar.MD  inputslog_temp.10.cpp  install_plugin.sh  leanpkg.path  leanpkg.toml  lib  real_sense_failure.lean  runVSCServer.sh  run_api.sh  run_background.sh  (+6 more)
.devcontainer/: Dockerfile  devcontainer.json
dev/: HOW_TO_RUN_IT.md  ONBOARD.md
dockerSetup/: Dockerfile  README.md  build.sh
dump/: AnalysingAST_Aux.cpp  annotated-dump.cpp
eval/: eval.md
inputs/: #temp.7.cpp#  .#temp.7.cpp  geometry_test.cpp  geometry_test_new.cpp  graph.dot  graph.ps  log_header.h  log_lib.cpp  log_temp.10.cpp  ltlib.cpp  ltlib.h  main.cpp  main.cpp~  temp.1.cpp  temp.10.cpp  temp.2.cpp  temp.3.cpp  temp.4.cpp  temp.5.cpp  temp.6.cpp  temp.7.cpp  temp.8.cpp  temp.9.cpp  temp.cpp  temp.cpp~  test1.cpp  transform.cpp  transform.h  vec.h  vec.h~  vec_lib.cpp  vec_lib.h
lean_client/: commands.py  credit_to_authors  example.lean  inference_output.txt  peirce_client.py  peirce_client_old.py  trio_server.py
new/: README.md  maths.lean
old/: CodeCoordinate.bad.cpp  CodeCoordinate.bad.h  Makefile  OldHandlers.cpp  Space.cpp  Space.h  boolean.lean  main.broken.cpp  main_arch.txt  modularity-impact-study.txt  oracle_test.cpp  recursive_algorithm.cpp.txt  space.lean
paper/: NOTES.md  ROS_ISSUES.md  language-bridge.txt
papers/: language-bridge.txt
ros/: ERRORS.md  HOW_TO_CREATE_NEW_DEMO.md  HOW_TO_RUN_DEMOS.MD  compile.sh  compile_playground.sh  run_failure_tests.sh  run_playground.sh  test.lean
ros/current_feature_tests/src/current_feature_tests/: CMakeLists.txt
ros/current_feature_tests/src/current_feature_tests/launch/: feature_tests.launch
ros/current_feature_tests/src/current_feature_tests/src/: test1-space_creation-input.cpp  test1-space_creation-output.lean  test11-parsapalooza.cpp  test2-standard_frame_creation-input.cpp  test5-transformation-input.cpp
ros/old/initial_feature_tests/src/initial_feature_tests/: CMakeLists.txt
ros/old/initial_feature_tests/src/initial_feature_tests/src/: annotate1-relative_frames.cpp
ros/playground/src/playground/: CMakeLists.txt
ros/playground/src/playground/launch/: playground.launch
ros/playground/src/playground/src/: scratch3.cpp
ros/ros_cps_errors/src/tests/: CMakeLists.txt  package.xml
ros/ros_cps_errors/src/tests/launch/: helloworld.launch
ros/ros_cps_errors/src/tests/src/: cases.cpp  get_pose.cpp  helloworld.cpp  tf_publisher.cpp  urdf_handler.cpp
ros/ros_cps_errors/src/tests/urdf/: test.urdf
ros/tf_tutorial/src/tf_tutorial/: CMakeLists.txt
ros/tf_tutorial/src/tf_tutorial/launch/: tf_tutorial.launch
ros_test_cases/: ERRORS.md  HOW_TO_CREATE_COMPILE_RUN_NEW_ROS_TEST_PROJECT.md  README.md  ROSSupport.md
ros_test_cases/new_test_cases/src/new_test_cases/: CMakeLists.txt  README.md
ros_test_cases/new_test_cases/src/new_test_cases/launch/: new.launch
ros_test_cases/new_test_cases/src/new_test_cases/src/: func_test.cpp  geom3_test.cpp  test_case.lean  time_test.cpp  trans_scalar_test.cpp
ros_test_cases/old/affine_tests/src/affine_tests/: CMakeLists.txt
ros_test_cases/old/affine_tests/src/affine_tests/src/: test1-space_creation-input-PASS.cpp  test1.3-tran-PASS.cpp  test10.1-transformation-input-PASS.cpp  test10.1-transformation-output-PASS.lean  test10.2-transformation_composition_success-input-PASS.cpp  test10.3-transformation_composition-input-FAIL.cpp  test2.1-standard_basis_creation-input-PASS.cpp  test3.1-point_and_vector_measurement_error-input-FAIL.cpp  test4.0-derived_frame_creation-input-PASS.cpp  test4.1-derived_frame_mismatch-input-FAIL.cpp  test4.2-derived_frame_match-output-PASS.lean  test5.0-point_and_vector_assignment-input-PASS.cpp  test5.1-point_minus_point-input-PASS.cpp  test5.2-vector_plus_point-input-PASS.cpp  test5.3-vector_plus_vector-output-PASS.lean  test5.4-vector_add_inv-output-PASS.lean  test5.5-point_plus_point-input-FAIL.cpp  test5.5-point_plus_point-output-FAIL.lean  test5.6-vector_div_vector-input-FAIL.cpp  test5.7-point_vec_assign-input-FAIL.cpp  test6.0-scalar_definition-input-PASS.cpp  test6.2-scalar_minus_scalar-input-PASS.cpp  test6.3-scalar_negative-input-PASS.cpp  test6.4-scalar_times_scalar-input-PASS.cpp  test6.6-scalar_times_vector-input-PASS.cpp  test6.7-scalar_times_point-input-FAIL.cpp  test7.1-quantity_algebra_full-input-PASS.cpp  test8.0-velocity_calculation-input-PASS.cpp  test8.1-acceleration_calculation-input-PASS.cpp
ros_test_cases/old/affine_tests/src/affine_tests/src/old/: test3.3-scalar_multiplication-input.cpp
ros_test_cases/playground/src/playground/: CMakeLists.txt  package.xml
ros_test_cases/playground/src/playground/launch/: playground.launch
ros_test_cases/playground/src/playground/src/: README_ROS_TRANSFORMS.md  hmmm.cpp  ros_transforms.cpp  transforms.cpp
ros_test_cases/playground/src/playground/src/old/: scratch2.cpp  scratch4.cpp  test3.4-quantity_and_conversion-input.cpp
ros_test_cases/playground/src/playground/test/: inp_tran.txt
src/: #bar#  AST commented.h  AST.h  ASTToCoords.cpp  ASTToCoords.h  BaseMatcher.cpp  BaseMatcher.h  Bridge.cpp  Bridge.h  CMakeLists.txt  Checker.cpp  Checker.h  Code.cpp  Code.h  CodeCoordinate.cpp  CodeCoordinate.h  CodeCoords.cpp  CodeCoords.h  CodeToCoords.h  CodeToDomain.cpp  CodeToDomain.h  Coords.cpp  Coords.h  CoordsToDomain.cpp  CoordsToDomain.h  CoordsToInterp.cpp  CoordsToInterp.h  Domain.cpp  Domain.h  Errk  Error  Interp.cpp  Interp.h  InterpToDomain.cpp  InterpToDomain.h  Interpretation.cpp  Interpretation.h  Logging.txt  MainMatcher.cpp  MainMatcher.h  (+63 more)
standards/: time_std.lean
std/: time_std.lean
(+1435 files in other folders)
