<package format="2">
  <name>helloworld</name>
  <version>1.1.1</version>

  <author email="ae8rh@virginia.edu">Andrew Elsey</author>
  <maintainer email="ae8rh@virginia.edu">Andrew Elsey</maintainer>
  <description>Starter code for demonstrating physically inconsistent ROS code</description>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf_conversions</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf_conversions></exec_depend>

  <export>
  </export>
</package>